update website to 2019

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: HTFF'18 - 5th International Conference on Heat Transfer and Fluid Flow
-meta: 5th International Conference on Heat Transfer and Fluid Flow (HTFF 2018). This conference covers different topics such as CFD, Heat Transfer Enhancement, Heat Transfer in Porous Media, Laminar and Turbulent Flow and Heat Transfer, Nanofluids, Non-Newtonian Fluids, Energies, Multiphase flow and heat transfer.
+title: HTFF'19 - 5th International Conference on Heat Transfer and Fluid Flow
+meta: 6th International Conference on Heat Transfer and Fluid Flow (HTFF 2019). This conference covers different topics such as CFD, Heat Transfer Enhancement, Heat Transfer in Porous Media, Laminar and Turbulent Flow and Heat Transfer, Nanofluids, Non-Newtonian Fluids, Energies, Multiphase flow and heat transfer.
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body"><strong>The 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) aims to become the leading annual conference in fields related to heat transfer and fluid flow.</strong> The goal of HTFF'18 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
+    <p class="body"><strong>The 6<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'19) aims to become the leading annual conference in fields related to heat transfer and fluid flow.</strong> The goal of HTFF'19 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
     
     <p class="body"><b>HTFF</b> is an acronym for <b>H</b>eat <b>T</b>ransfer and <b>F</b>luid <b>F</b>low.</p>
 
@@ -26,8 +26,8 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body">To learn more about the previous event in this conference series, please visit: <a href="/past-events/" class="body-link">Past Event</a>.</p>
 
     <br>
-    <h2>Paper Topics</h2>
-      <p class="body">HTFF'18 is now accepting papers on the following topics.</p>
+   <!-- <h2>Paper Topics</h2>
+      <p class="body">HTFF'19 is now accepting papers on the following topics.</p>
       <ul class="topics">
       <li>Combustion</li>
       <li>Compressible and Incompressible Flows</li>
@@ -60,7 +60,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
       <img src="../img/Hamed.jpg" class="flex-img" alt="Dr. Mohamed Hamed">
       <p class="body"><b>Dr. Mohamed Hamed,</b><br>McMaster University, Canada<br><a href="../keynote#Dr. Mohamed Hamed" class="body-link">Biography & Abstract</a></p>
     </div><br><br>
-  </center>
+  </center>-->
 
 	<br>
       <div class="sponsor">
