--- a/past-events.html
+++ b/past-events.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: HTFF'18 - Past Events
+title: HTFF'19 - Past Events
 meta: Information about HTFF'17
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
@@ -10,7 +10,8 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
   <div class="unit-spacer content">
 
   	<h3>Past Events</h3>
-    <span class="anchor" id="top"></span>
+    <p class="body">Information about the last conference in this conference series will be available soon. Thank you for your patience.</p>
+    <!--<span class="anchor" id="top"></span>
     <p class="body">The previous event in this conference series, HTFF, was held on June 8 - 10, 2017, in Rome, Italy. HTFF is one of the 4 conferences that make up the World Congress on Mechanical, Chemical, and Material Engineering (MCM). Our year-long planning and organization of several committees resulted in the conference becoming a major success. Please see below some of the highlights of the event.</p>
     <ul>
         <li><a href="#Awards" class="body-link">Best Paper Award Winners</a></li>
@@ -110,7 +111,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
             <center><a href="http://2017.htffconference.com/MCM17_Program.pdf" class="body-link" target="_blank"><br>MCMh'17 Program</a></center>
     <div class="top"><a href="#top">top</a></div>
     <div class="border"></div>
-
+-->
 
 
     <br><br>
