--- a/accommodation.html
+++ b/accommodation.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: HTFF'18 - Accommodation
+title: HTFF'19 - Accommodation
 meta: The list of hotels for HTFF
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
@@ -8,9 +8,9 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 <a id="top"></a>
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-  <!-- <p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p> -->
+   <p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p> 
    
-  <p class="body"><strong>We are pleased to announce that the 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) will be held at the Novotel Madrid Center. </strong><!-- More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! Please click here for more information: Novotel Madrid Center. --></p>
+ <!-- <p class="body"><strong>We are pleased to announce that the 6<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'19) will be held at the Novotel Madrid Center. </strong> More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! Please click here for more information: Novotel Madrid Center.</p>
 
     <p class="body">A list of hotels within the walking distance from the conference venue is available below. <i>Please note that the reservations must be made individually directly by either phone or online at a specific hotel.</i> We suggest to make your reservations as early as possible to get the best discount and to avoid any toursit rush.</p>
 
@@ -117,7 +117,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 <p class="body">For making reservations, please call: +34 912 21 40 60<br>
 <!-- <b>Group Discount:</b> Mention the conference to receive a Clarion discount.</p> -->
 
-<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
+<!-- <p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
 
 <a href="http://www.novotelmadridcenter.com" class="body-link" target="_blank">www.novotelmadridcenter.com</a>
 
@@ -269,7 +269,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
 <a href="#top" class="top">TOP</a>
 </div>
-
+-->
 
   </div>
   </div>
