--- a/dates.html
+++ b/dates.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: HTFF'18 - Important Dates
+title: HTFF'19 - Important Dates
 meta: The important deadlines for HTFF
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The important dates and deadlines for the 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) are as follows:</p>
+    <p class="body">The important dates and deadlines for the 6<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'19) will be announced soon. We appreciate your patience!</p>
 
-<div class="mobile">
+<!--<div class="mobile">
     <table>
     <tr>
     <td class="date-title">Conference Dates</td>
@@ -18,38 +18,36 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
         <td class="imp-date">August 16 - 18, 2018</td>
     </tr>
     <tr>
-    <td class="date-title">Paper Submission Deadline<!-- <br>
-        <strong>Final Extended Paper Submission Deadline</strong></ --><td>
+    <td class="date-title">Paper Submission Deadline<td>
     </tr>
     <tr>
-        <td class="imp-date">February 9, 2018<!-- <p class="body">
-            <strong>March 24, 2018</strong></p> --></td>
+        <td class="imp-date">February 9, 2018</td>
     </tr>
     <tr>
-    <td class="date-title">Notification of Authors<!-- <br><strong>Final Extended Notification of Authors</strong> --></td>
+    <td class="date-title">Notification of Authors</td>
+    </tr>-->
+   <!-- <tr>
+    <td class="imp-date">March 1, 2018<!-- <p class="body"><strong>March 27, 2018</strong></p> </td>
     </tr>
     <tr>
-    <td class="imp-date">March 1, 2018<!-- <p class="body"><strong>March 27, 2018</strong></p> --></td>
+    <td class="date-title">Final Version of Accepted Submissions Deadline<!-- <br><strong>Final Version of Accepted Submissions Deadline</strong></td>
     </tr>
     <tr>
-    <td class="date-title">Final Version of Accepted Submissions Deadline<!-- <br><strong>Final Version of Accepted Submissions Deadline</strong> --></td>
-    </tr>
-    <tr>
-    <td class="imp-date">April 20, 2018<!-- <p class="body"><strong>April 20, 2018</strong></p> --></td>
+    <td class="imp-date">April 20, 2018<!-- <p class="body"><strong>April 20, 2018</strong></p> </td>
     </tr>
     <tr>
     <td class="date-title" rowspan="3">Registration Deadline</td>
     </tr>
     <tr>
     <td class="reg">Early Bird Registration<!-- <br>
-        <b>Final Extended Early Bird Registration --></b>
-        <p class="body">March 16, 2018<!-- <br>
-        <strong>April 7, 2018</strong> --></p></td>
+        <b>Final Extended Early Bird Registration </b>
+        <p class="body">March 16, 2018<br>
+        <strong>April 7, 2018</strong> </p></td>
     </tr>
     <tr>
-        <td class="reg">*Regular Registration<!-- <br><div class="past-text">Final Extended Regular Registration*</div> --> <p class="body">April 20, 2018<!-- <br><b>May 1, 2018</b> --></p></td>
-    </tr>
-    <tr>
+        <td class="reg">*Regular Registration<!-- <br><div class="past-text">Final Extended Regular Registration*</div> --> <!--<p class="body">April 20, 2018<!-- <br><b>May 1, 2018</b> </p></td>
+    </tr>-->
+   <!-- <tr>
         <td class="reg">Late Registration <p class="body">After April 20, 2018</p></td>
     </tr>
 </table>
@@ -60,25 +58,25 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <tr>
     <td class="date-title">Conference Dates</td>
     <td class="imp-date">August 16 - 18, 2018</td>
-</tr>
-    <tr>
-    <td class="date-title">Paper Submission Deadline<!-- <br><div class="past-text">Final Extended Paper Submission Deadline</div> --></td>
-        <td class="imp-date">February 9, 2018<!-- <br><b>March 24, 2018</b> --></td>
+</tr>-->
+    <!--<tr>
+    <td class="date-title">Paper Submission Deadline<!-- <br><div class="past-text">Final Extended Paper Submission Deadline</div> </td>
+        <td class="imp-date">February 9, 2018</td>
     </tr>
     <tr>
-    <td class="date-title">Notification of Authors<!-- <br><div class="past-text">Final Extended Notification of Authors</div> --></td>
-    <td class="imp-date">March 1, 2018<!-- <br><b>March 27, 2018</b> --></td>
+    <td class="date-title">Notification of Authors<!-- <br><div class="past-text">Final Extended Notification of Authors</div> </td>
+    <td class="imp-date">March 1, 2018<!-- <br><b>March 27, 2018</b> </td>
 </tr>
     <tr>
-    <td class="date-title">Final Version of Accepted Submissions Deadline<!-- <br><div class="past-text">Final Version of Accepted Submissions Deadline --></td>
-    <td class="imp-date">April 20, 2018<!-- <Br><b>April 20, 2018</b> --></td>
+    <td class="date-title">Final Version of Accepted Submissions Deadline<!-- <br><div class="past-text">Final Version of Accepted Submissions Deadline </td>
+    <td class="imp-date">April 20, 2018 <Br><b>April 20, 2018</b> </td>
 </tr>
 <tr>
     <th class="date-title" rowspan=3>Registration Deadline</th>
-    <td class="reg">Early Bird Registration<!-- <div class="past-text">Final Extended Early Bird Registration</div> --><p class="body">March 16, 2018<!-- <br><strong>April 7, 2018</strong> --></p></td>
+    <td class="reg">Early Bird Registration<!-- <div class="past-text">Final Extended Early Bird Registration</div> <p class="body">March 16, 2018<!-- <br><strong>April 7, 2018</strong> </p></td>
 </tr>
 <tr>
-    <td class="reg">*Regular Registration<!-- <br><div class="past-text">Final Extended Regular Registration*</div> --><p class="body">April 20, 2018<!-- <br><b>May 1, 2018</b> --></p></td>
+    <td class="reg">*Regular Registration<!-- <br><div class="past-text">Final Extended Regular Registration*</div> <p class="body">April 20, 2018<!-- <br><b>May 1, 2018</b> </p></td>
 </tr>
 <tr>
         <td class="reg">Late Registration <br><p class="body">After April 20, 2018</p></td>
@@ -86,6 +84,6 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 </table>
 </div>
 
-<p class="body">*This is the deadline for the registration of Authors</p>
+<p class="body">*This is the deadline for the registration of Authors</p>-->
   </div>
   </div>
