--- a/keynote.html
+++ b/keynote.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: HTFF'18 - Keynote Speakers
+title: HTFF'19 - Keynote Speakers
 meta: The Keynote Speakers for HTFF
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <!-- <p class="body">The keynote information for the 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) will be announced soon. We appreciate your patience!</p> -->
+     <p class="body">The keynote information for the 6<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'19) will be announced soon. We appreciate your patience!</p>
 
-    <p class="body">We are very happy to announce the following keynote speaker for the 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18):</p>
+   <!-- <p class="body">We are very happy to announce the following keynote speaker for the 6<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'19):</p>
 
     <div class="keynotes">
 
@@ -33,25 +33,25 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
              <p class="body">McMaster University, Canada</p>
         </div>
       </div>
-  </div>  <!-- End Keynotes -->
+  </div>  --> <!-- End Keynotes -->
 
 
-  <span class="anchor" id="Dr. Chamil Abeykoon"></span>
+ <!-- <span class="anchor" id="Dr. Chamil Abeykoon"></span>
   <div class="keynote-info">
   <p class="bold">Dr. Chamil Abeykoon</p><img src="../img/Abeykoon.jpg" width="170" align="right" class="keynote-img">
   <p class="body">Chamil received his BSc (Hons) in Mechanical Engineering from the University of Peradeniya, Sri Lanka with the award of best performance in Mechanical Engineering in 2007. Then, he received his PhD in Mechanical Engineering in 2011 from the Queens University Belfast, UK with several publications where one of his publications was awarded with a young author best paper award from the IEEE in 2011. After having a few academic positions, Chamil joined the Faculty of Science and Engineering of University of Manchester (UoM) as an Assistant Professor in October 2015. Currently Chamil is working mainly with the Northwest Composts Centre and the Aerospace Research Institute of the UoM. So far, he has authored 35+ peer-reviewed journal/conference papers. Moreover, he is the author of the monograph Polymer Extrusion: A Study on Thermal Monitoring Techniques and Melting Issues. His research interests include: Process Monitoring, Modelling and Control; Soft Sensors and Soft Sensing; Process Instrumentation; Energy Efficiency; and Heat Transfer. At present, he is mainly researching in the areas such as melt flow behaviour in polymer processing, 3D printing, development of inferential (soft) sensors for processing applications, heat transfer (heat flow and cooling) in gas turbine applications. He is an associate member of the IESL, IMechE, ICPM and also a Fellow of the Higher Education Academy UK.</p>
 
-  <p class="keynote-topic"><b>Topic of Keynote:</b> Investigation of Thermal Stability of Non-Newtonian Melt Flows</p>
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Investigation of Thermal Stability of Non-Newtonian Melt Flows</p>-->
 
   <!-- <a href="../paper/Keynote - Dr. Abeykoon.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a> -->
 
-  <div class="top"><a href="#top">top</a></div>
+  <!--<div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
   </div> <!-- End Keynote Info-->
 
 
 
- <span class="anchor" id="Dr. Jalel Azaiez"></span>
+ <!--<span class="anchor" id="Dr. Jalel Azaiez"></span>
  <div class="keynote-info">
  <p class="bold">Dr. Jalel Azaiez</p> <img src="../img/Azaiez.jpg" width="170" align="right" class="keynote-img"> 
  <p class="body">Jalel Azaiez is currently a Professor at the Department of Chemical and Petroleum Engineering in the University of Calgary (Canada). He is also Associate Dean in the Faculty of Graduate Studies. He holds a Dilôme d’Ingénieur from the Ecole Centrale de Paris (France) and a M.Sc. and Ph.D. from Stanford University (U.S.A.) both in Chemical Engineering. 
@@ -63,11 +63,11 @@ His recent research focuses on modelling fluid flow instabilities and in particu
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div> <!-- End Keynote Info-->
+  </div>--> <!-- End Keynote Info-->
 
 
 
-  <span class="anchor" id="Dr. Mohamed Hamed"></span>
+  <!--<span class="anchor" id="Dr. Mohamed Hamed"></span>
  <div class="keynote-info">
  <p class="bold">Dr. Mohamed Hamed</p> <img src="../img/Hamed.jpg" width="170" align="right" class="keynote-img"> 
  <p class="body">Mohamed Hamed is a Professor of Mechanical Engineering and the Founding Director of the Thermal Processing Laboratory (TPL) at The Department of
@@ -98,7 +98,7 @@ technical reviewer in more than thirty technical international journals and fund
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div> <!-- End Keynote Info-->
+  </div> --><!-- End Keynote Info-->
 
   
 
