--- a/registration.html
+++ b/registration.html
@@ -1,18 +1,18 @@
 ---
 layout: default
-title: HTFF'18 - Registration
+title: HTFF'19 - Registration
 meta: The registration details and instructions can be found here
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The registration fees for the 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) are listed below. All prices are in Euros and VAT (Value Added Tax) included:</p>
+    <p class="body">The registration fees for the 6<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'19) are listed below. All prices are in Euros and VAT (Value Added Tax) included:</p>
 
     <div class="mobile">
     <table>
     <tbody><tr>
-        <td class="date-title"><strong>Early Bird Registration<!-- <br>Final Extended Early Bird Registration --></strong><br><!-- <s>Prior to March 1, 2018</s><br> -->Prior to March 16, 2018</td>  
+        <td class="date-title"><strong>Early Bird Registration<!-- <br>Final Extended Early Bird Registration --></strong><br><!-- <s>Prior to March 1, 2018</s><br> --><!--Prior to March 16, 2018--></td>  
     </tr>
     <tr>
     <td class="imp-date"><p class="left">Students*:</p> <p class="right">€450</p></td>   
@@ -22,7 +22,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     </tr>
 
     <tr>
-    <td class="date-title"><strong>Regular Registration</strong><br><!-- </s><div class="past-text">Final Extended Regular Registration --></div><!-- <s><br>Prior to April 15, 2018</s><br> -->Prior to April 20, 2018</td>
+    <td class="date-title"><strong>Regular Registration</strong><br><!-- </s><div class="past-text">Final Extended Regular Registration </div><!-- <s><br>Prior to April 15, 2018</s><br> Prior to April 20, 2018--></td>
     </tr>
     <tr>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€550</p></td>
@@ -32,7 +32,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     </tr>
 
     <tr>
-    <td class="date-title" rowspan="2"><strong>Late Registration</strong><br>After April 20, 2018</td>
+    <td class="date-title" rowspan="2"><strong>Late Registration</strong><!--<br>After April 20, 2018--></td>
     </tr>
     <tr>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€600</p></td>
@@ -59,7 +59,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <div class="desktop">
     <table>
     <tbody><tr>
-    <th class="date-title" rowspan="2"><strong>Early Bird Registration</strong><br><!-- <div class="past-text">Final Extended Early Bird Registration</div> --><div class="past-text"><b>Prior to March 16, 2018</b></div></th>
+    <th class="date-title" rowspan="2"><strong>Early Bird Registration</strong><br><!-- <div class="past-text">Final Extended Early Bird Registration</div> <div class="past-text"><b>Prior to March 16, 2018</b></div>--></th>
     <td class="imp-date"><p class="left">Students*:</p> <p class="right">€450</p></td>
     </tr>
     <tr>
@@ -67,7 +67,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     </tr>
 
     <tr>
-    <th class="date-title" rowspan="2"><strong>Regular Registration</strong><!-- <div class="past-text">Final Extended Regular Registration</div> --><br><div class="past-text"><b>Prior to April 20, 2018</b></div></th>
+    <th class="date-title" rowspan="2"><strong>Regular Registration</strong><!-- <div class="past-text">Final Extended Regular Registration</div> <br><div class="past-text"><b>Prior to April 20, 2018</b></div>--></th>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€550</p></td>
     </tr>
     <tr>
@@ -75,7 +75,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     </tr>
 
     <tr>
-    <th class="date-title" rowspan="2"><strong>Late Registration</strong><br><div class="past-text"><b>After April 20, 2018</b></di></th>
+    <th class="date-title" rowspan="2"><strong>Late Registration</strong><!--<br><div class="past-text"><b>After April 20, 2018</b></di>--></th>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€600</p></td>
     
 </tr>
@@ -113,10 +113,10 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 <p class="body"><b>***Important information for workshop registrants:</b> All workshop attendees will receive a certificate of participation. <!-- The registration deadline for the workshop is on May 1, 2018. --> Registration fees will be refunded only if the workshop is cancelled due to insufficient amount of registrants (less than 5).</p>
 
 <p class="body"><b>Important information for registrants who need to apply for VISA:</b><br>
-Please visit <a href="https://www.esmadrid.com/en/visas-madrid" class="body-link">
-EsMadrid</a> for more details.</p>
+Please visit <a href="https://www.mzv.cz/jnp/" class="body-link">
+Ministry of Foreign Affairs of the Czech Republic </a> for more details.</p>
 
-    <p class="body">You may register for HTFF'18 by one of the methods below. Please click on one of the icons to access the details of each payment method.</p>
+    <p class="body">You may register for HTFF'19 by one of the methods below. Please click on one of the icons to access the details of each payment method.</p>
 
     <center>          
     <div class="unit unit-s-1 unit-m-1-4 unit-l-1-4">
