--- a/venue.html
+++ b/venue.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: HTFF'18 - Conference Venue
+title: HTFF'19 - Conference Venue
 meta: The conference venue of HTFF
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-  <!-- <p class="body">The venue of the conference will be announced shortly! Thank you for your patience.</p> -->
+  <p class="body">The venue of the conference will be announced shortly! Thank you for your patience.</p> 
 
-<p class="body"><strong>We are pleased to announce that the  5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) will be held in Madrid, Spain, on August 16 - 18, 2018 at the Novotel Madrid Center</strong>.</p>
+<!--<p class="body"><strong>We are pleased to announce that the  6<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'19) will be held in Madrid, Spain, on August 16 - 18, 2018 at the Novotel Madrid Center</strong>.</p>
 
 <h3>Novotel Madrid Center</h3>
 <p class="body">Novotel Madrid Center is located in the elegant Salamanca district. The hotel is strategically located with easy access to the airport. The rooms combine modernity and elegance, technology and furnishings. All rooms are equipped with free WIFI. At Novotel restaurant you will enjoy cuisine that has a clear focus on local produce whilst remaining loyal to the cosmopolitan spirit of Madrid.</p>
@@ -41,7 +41,7 @@ Email info@novotelmadridcenter.com<br>
 <p class="body">No city on earth is more alive than Madrid, a beguiling place whose sheer energy carries a simple message: this city really knows how to live.</p>
 <p class="body">For more information on Madrid, please visit: <a target="_blank" href="https://www.esmadrid.com/en" class="body-link">www.esmadrid.com</a>
 </p>
-
+-->
 
   </div>
   </div>
