--- a/keynote.html
+++ b/keynote.html
@@ -43,7 +43,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
   <p class="keynote-topic"><b>Topic of Keynote:</b> Investigation of Thermal Stability of Non-Newtonian Melt Flows</p>
 
-  <!-- <a href="../paper/Keynote - Dr. Abeykoon.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a> -->
+  <a href="../paper/Keynote - Dr.Abeykoon.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
