--- a/registration.html
+++ b/registration.html
@@ -9,12 +9,12 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
   <div class="unit-spacer content">
     <p class="body">The registration fees for the 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) are listed below. All prices are in Euros and VAT (Value Added Tax) included:</p>
 
-        <div class="mobile">
+<div class="mobile">
     <table>
     <tbody><tr>
         <td class="date-title">
-            <strong>Extended Early Bird Registration<br>
-            Prior to May 1, 2018</strong><br>
+            <strong>Final Extended Early Bird Registration<br>
+            Prior to June 18, 2018</strong><br>
             <s>Early Bird Registration</s><br>
             <s>Prior to March 16, 2018</s>
         </td>  
@@ -28,8 +28,8 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
     <tr>
         <td class="date-title">
-            <strong>Extended Regular Registration**<br>
-            Prior to June 1, 2018</strong><br>
+            <strong>Final Extended Regular Registration**<br>
+            Prior to July 10, 2018</strong><br>
             <s>Regular Registration </s><br>
             <s>Prior to April 20, 2018</s>
         </td>
@@ -44,7 +44,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <tr>
         <td class="date-title" rowspan="2">
             <strong>Late Registration<br>
-            After June 1, 2018</strong>
+            After Jule 10, 2018</strong>
         </td>
     </tr>
     <tr>
@@ -73,8 +73,8 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <table>
     <tbody><tr>
         <th class="date-title" rowspan="2">
-            <strong>Extended <br>Early Bird Registration<br>
-            Prior to May 1, 2018</strong><br>
+            <strong>Final Extended <br>Early Bird Registration<br>
+            Prior to June 18, 2018</strong><br>
             <span class="past-text">Early Bird Registration<br>
             Prior to March 16, 2018</span>
         </th>
@@ -86,8 +86,8 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
     <tr>
         <th class="date-title" rowspan="2">
-            <strong>Extended <br>Regular Registration**<br>
-            Prior to June 1, 2018</strong><br>
+            <strong>Final Extended <br>Regular Registration**<br>
+            Prior to July 10, 2018</strong><br>
             <span class="past-text">Regular Registration<br>
             Prior to April 20, 2018</span>
         </th>
@@ -100,7 +100,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <tr>
         <th class="date-title" rowspan="2">
             <strong>Late Registration<br>
-            After June 1, 2018</strong>
+            After July 10, 2018</strong>
         </th>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€600</p></td>
     
@@ -120,6 +120,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 </tbody>
 </table>
 </div>
+
 
 <br>
 <p class="announcement-text">
