--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
+  
+  <p class="announcement-text" align="center" style="color:#E97024"><strong>The conference proceedings of this conference will be indexed by Scopus and Google Scholar.</strong></p>
+  
     <p class="body"><strong>The 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) aims to become the leading annual conference in fields related to heat transfer and fluid flow.</strong> The goal of HTFF'18 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
     
     <p class="body"><b>HTFF</b> is an acronym for <b>H</b>eat <b>T</b>ransfer and <b>F</b>luid <b>F</b>low.</p>
