--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body">To learn more about the previous event in this conference series, please visit: <a href="/past-events/" class="body-link">Past Event</a>.</p>
 
     <br>
-   <!-- <h2>Paper Topics</h2>
+   <h2>Paper Topics</h2>
       <p class="body">HTFF'19 is now accepting papers on the following topics.</p>
       <ul class="topics">
       <li>Combustion</li>
@@ -42,7 +42,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
       </ul>
       <p class="body">For a complete list of the paper topics, please visit: <a href="/papers" class="body-link">Submissions</a>.</p>
 
-      <br>
+      <!-- <br>
 
 	<h2>Keynote Speakers:</h2>
     <center>
