--- a/committee.html
+++ b/committee.html
@@ -9,6 +9,16 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
   <div class="unit-spacer content">
      <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p> 
 
+     <p class="bold">Scientific Committee Chairs:</p>
+
+    <div class="unit unit-s-1-2 unit-m-1-2 unit-l-1-2">
+        <img src="../img/Zhao.jpg" width="150" align="left" style="padding-right: 1em;"><p class="body">
+        <b>Prof. Yuyuan Zhao</b><br>
+        University of Liverpool, United Kingdom<br>
+        Congress Chair<br>
+        <a href="https://www.liverpool.ac.uk/engineering/staff/yuyuan-zhao/" class="body-link" target="_blank">Website</a></p>
+    </div><br><br>
+
     <p class="bold">Scientific Committee Members:</p><br>
 
     <p class="body"><b>Dr. Thomas Adams,</b> Rose-Hulman Institute of Technology, USA</p>
