--- a/committee.html
+++ b/committee.html
@@ -34,7 +34,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <!-- <p class="body"><b>Dr. Francesc Xavier Grau,</b> Universitat Rovira I Virgili, Spain</p> -->
      <p class="body"><b>Dr. Mohamed Hamed,</b> McMaster University, Canada</p>
     <p class="body"><b>Dr. Iqbal Husain,</b> Luther College-University of Regina, Canada</p>
-   <!-- <p class="body"><b>Dr. Tomáš Hyhlík,</b> Czech Technical University in Lisbon, Portugal</p>
+    <p class="body"><b>Dr. Tomáš Hyhlík,</b> Czech Technical University in Lisbon, Portugal</p>
     <!-- <p class="body"><b>Dr. J. Kadambi,</b> Case Western Reserve University, USA</p> -->
      <p class="body"><b>Dr. Tassos G. Karayiannis,</b> Brunel University, UK</p>
     <!-- <p class="body"><b>Dr. Gergely Kristóf,</b> Budapest University of Technology and Economics, Hungary</p> -->
@@ -52,12 +52,13 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body"><b>Dr. Ziad Saghir,</b> Ryerson University, Canada</p>
     <!-- <p class="body"><b>Dr. Khellil Sefiane,</b> The University of Edinburgh, UK</p>-->
     <p class="body"><b>Dr. Ahmet Selamet,</b> The Ohio State University, USA</p>
+    <p class="body"><b>Dr. Juan Pedro Solano,</b> Polytechnic University of Cartagena, Spain</p>
     <p class="body"><b>Dr. Pavel Strizhak,</b> National Research Tomsk Polytechnic University, Russia</p>
     <p class="body"><b>Dr. Aldo Tamburrino,</b> University of Chile, Chile</p>
   <!--  <p class="body"><b>Dr. Wen-Quan Tao,</b> Xi'an Jiaotong University, China</p>
     <p class="body"><b>Dr. Muris Torlak,</b> University of Sarajevo, Bosnia and Herzegovina</p>
      <p class="body"><b>Dr. Pavol Vitkovic,</b> Czech Technical University in Lisbon, Portugal</p> -->
-   <!--  <p class="body"><b>Dr. Liqiu Wang,</b> University of Hong Kong, Hong Kong</p>-->
+    <p class="body"><b>Dr. Liqiu Wang,</b> University of Hong Kong, Hong Kong</p>
     <p class="body"><b>Dr. Yuwen Zhang,</b> University of Missouri, USA</p>
   </div>
   </div>
