--- a/index.html
+++ b/index.html
@@ -50,27 +50,27 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
       <p>For more information about of the previous event, please visit: <a href="/past-events" class="body-link">Past Event</a></p>
 
 
-      <!-- <br>
+      <br>
 
 	<h2>Keynote Speakers:</h2>
     <center>
     <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
-      <img src="../img/Azaiez.jpg" class="flex-img" alt="Dr. Jalel Azaiez">
-      <p class="body"><b>Dr. Jalel Azaiez,</b><br>The University of Calgary, Canada<br><a href="../keynote#Dr. Jalel Azaiez" class="body-link">Biography & Abstract</a></p>
+      <img src="../img/Gosselin.jpg" class="flex-img" alt="Dr. Louis Gosselin">
+      <p class="body"><b>Dr. Louis Gosselin,</b><br>Université Laval, Canada<br><!--<a href="../keynote#Dr. Jalel Azaiez" class="body-link">Biography & Abstract</a>--></p>
     <br>
     </div>
 
     <div class="unit unit-s-1-1 unit-m-1-4 unit-l-1-2 keynoteIndex">
-      <img src="../img/Abeykoon.jpg" class="flex-img" alt="Dr. Chamil Abeykoon">
-      <p class="body"><b>Dr. Chamil Abeykoon,</b><br>The University of Manchester, UK<br><a href="../keynote#Dr. Chamil Abeykoon" class="body-link">Biography & Abstract</a></p>
+      <img src="../img/Qiu.jpg" class="flex-img" alt="Dr. Huihe Qiu">
+      <p class="body"><b>Dr. Huihe Qiu,</b><br>Hong Kong University of Science & Technology<br><!--<a href="../keynote#Dr. Chamil Abeykoon" class="body-link">Biography & Abstract</a>--></p>
     </div><br><br>
 
     
     <div class="unit unit-s-1-1 unit-m-1-4 unit-l-1-2 keynoteIndex">
-      <img src="../img/Hamed.jpg" class="flex-img" alt="Dr. Mohamed Hamed">
-      <p class="body"><b>Dr. Mohamed Hamed,</b><br>McMaster University, Canada<br><a href="../keynote#Dr. Mohamed Hamed" class="body-link">Biography & Abstract</a></p>
+      <img src="../img/Adams.jpg" class="flex-img" alt="Dr. Thomas Adams">
+      <p class="body"><b>Dr. Thomas Adams,</b><br>Rose-Hulman Institute of Technology, USA<br><!--<a href="../keynote#Dr. Mohamed Hamed" class="body-link">Biography & Abstract</a>--></p>
     </div><br><br>
-  </center>-->
+  </center>
 
 	<br>
       <div class="sponsor">
@@ -79,7 +79,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
         <a href="http://avestia.com" target="_blank"><img src="../img/avestia.png" alt="Avestia Publishing" style="max-width:150px; float:left;  padding: 0px 20px 0px 20px;"></a>
 
-         <a href="http://where2submit.com" target="_blank"><img src="../img/W2S_logo.png" alt="Where2Submit"style="max-width:230px; float:left;  padding: 35px 25px 0px 25px;"></a>
+         <a href="http://where2submit.com" target="_blank"><img src="../img/W2S_logo.png" alt="Where2Submit" style="max-width:230px; float:left;  padding: 35px 25px 0px 25px;"></a>
         <div class="cf"></div>
       </div>
 	
