--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <center>
     <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
       <img src="../img/Gosselin.jpg" class="flex-img" alt="Dr. Louis Gosselin">
-      <p class="body"><b>Dr. Louis Gosselin,</b><br>Université Laval, Canada<br><!--<a href="../keynote#Dr. Jalel Azaiez" class="body-link">Biography & Abstract</a>--></p>
+      <p class="body"><b>Dr. Louis Gosselin</b><br>Université Laval, Canada<br><a href="../keynote#Dr. Louis Gosselin" class="body-link">Biography & Abstract</a></p>
     <br>
     </div>
 
     <div class="unit unit-s-1-1 unit-m-1-4 unit-l-1-2 keynoteIndex">
       <img src="../img/Qiu.jpg" class="flex-img" alt="Dr. Huihe Qiu">
-      <p class="body"><b>Dr. Huihe Qiu,</b><br>Hong Kong University of Science & Technology<br><!--<a href="../keynote#Dr. Chamil Abeykoon" class="body-link">Biography & Abstract</a>--></p>
+      <p class="body"><b>Dr. Huihe Qiu</b><br>Hong Kong University of Science & Technology<br><a href="../keynote#Dr. Huihe Qiu" class="body-link">Biography & Abstract</a></p>
     </div><br><br>
 
     
     <div class="unit unit-s-1-1 unit-m-1-4 unit-l-1-2 keynoteIndex">
       <img src="../img/Adams.jpg" class="flex-img" alt="Dr. Thomas Adams">
-      <p class="body"><b>Dr. Thomas Adams,</b><br>Rose-Hulman Institute of Technology, USA<br><!--<a href="../keynote#Dr. Mohamed Hamed" class="body-link">Biography & Abstract</a>--></p>
+      <p class="body"><b>Dr. Thomas Adams</b><br>Rose-Hulman Institute of Technology, USA<br><a href="../keynote#Dr. Thomas Adams" class="body-link">Biography & Abstract</a></p>
     </div><br><br>
   </center>
 
